--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lodash": "^4.17.19",
     "next": "9.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
