--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.19",
-    "next": "9.4.2",
+    "next": "^10.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "rebass": "^4.0.7"
