--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "lodash": "^4.17.19",
-    "next": "^10.0.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "lodash": "^4.17.21",
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rebass": "^4.0.7"
   },
   "devDependencies": {
-    "@types/node": "^14.0.4",
-    "@types/react": "^16.9.35",
-    "typescript": "^3.9.3"
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "typescript": "^4.5.4"
   }
 }
