--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lodash": "^4.17.21",
     "next": "^14.2.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rebass": "^4.0.7"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
